syntax = "proto3";

option go_package = "/generated";

package habbitTracker;


service HabitTracker{
    rpc CreateHabit(Habit) returns(Status){}
    rpc GetHabit(HabitId) returns(Habit){}
    rpc UpdateHabit(Habit) returns(Status){}
    rpc DeleteHabit(HabitId) returns(Status){}
    rpc GetUserHabits(UserId) returns(Habit){}
    rpc CreateHabitLog(HabitLog) returns(Status){}
    rpc GetHabitLogs(HabitId) returns(HabitLog){}
    rpc GetHabitSuggestions(Req) returns(Habits){}
}


message HabitId{
    string HabbitId = 1;
}

message Habit{
    string habbitId = 1;
    string userId = 2;
    string name = 3;
    string discription = 4;
    string frequency = 5;
    string createdAt = 6;
}

message HabitLog{
    string id = 1;
    string habbitId = 2;
    string loggedAt = 3;
    string notes = 4;
}


message Status{
    bool status = 1;
}

message UserId{
    string userId = 1;
}

message Req{}

message UserHabits{
    repeated Habit habbits = 1;
}

message Habits{
    repeated HabitLog habbits = 1;
}